--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
 
     <!-- Misc -->
     <string name="filler_string" translatable="false">     </string>
-    <string name="exit_button_content_description">Exit the app</string>
+    <string name="exit_button_content_description">Log In</string>
     <string name="or">or</string>
     <string-array name="default_wordLists">
         <item>Default(English)</item>
@@ -25,23 +25,15 @@
     <string name="new_game_btn">New Game</string>
     <string name="join_game_btn">Join Game</string>
 
-    <!-- Login -->
-    <string name="prompt_name">Username</string>
-    <string name="prompt_password">Password</string>
-    <string name="error_invalid_name">Invalid username</string>
-    <string name="error_invalid_password">Password is too short</string>
-    <string name="error_incorrect_password">Incorrect password</string>
-    <string name="error_field_required">This field is required</string>
-
     <!-- Lobby -->
     <string name="title_activity_lobby">Lobby</string>
     <string name="default_lobby_title">Title</string>
     <string name="message_default">Message</string>
-    <string name="wait_message">Waiting for other players…</string>
+    <string name="wait_players">Waiting for other players…</string>
     <string name="start_game">Start Game</string>
     <string name="next_round">Next Round</string>
     <string name="start_lobby_error">Couldn\'t start lobby</string>
-    <string name="waiting_for_owner">Waiting for lobby owner</string>
+    <string name="wait_owner">Waiting for lobby owner</string>
     <string name="next_round_error">Couldn\'t start next round</string>
 
     <!-- Draw -->
@@ -56,7 +48,7 @@
     <string name="description">Description</string>
 
     <!-- Settings -->
-    <string name="settings_title">Settings</string>
+    <string name="title_activity_settings">Settings</string>
     <string name="action_settings">Settings</string>
     <string name="pref_server_url_title">Server URL</string>
     <string name="pref_server_url_summary">Enter a gameserver URL</string>
@@ -68,16 +60,42 @@
     <string name="wordlist_id">WordList ID</string>
     <string name="cancel">Cancel</string>
     <string name="submit">Submit</string>
+    <string name="wait_progress">Please wait a bit…</string>
 
-    <!-- Create Dialog -->
-    <string name="choose_default_word_list">Choose a default Word list</string>
-    <string name="enter_custom_word_list_id">enter a custom WordList ID</string>
+    <!-- Login Dialog -->
+    <string name="title_login">Log in</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="prompt_email">Invalid email</string>
+    <string name="error_invalid_password">Password is too short</string>
+    <string name="error_incorrect_password">Incorrect password</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="error_invalid">Enter a valid email &amp; password</string>
+    <string name="wait_login">Logging in</string>
+
+    <!-- Create/Join Dialog -->
+    <string name="title_create">Create Lobby</string>
+    <string name="title_join">Join Lobby</string>
+    <string name="btn_join">Join</string>
+    <string name="choose_default_word_list">Choose a default wordlist</string>
+    <string name="enter_custom_word_list_id">Enter a custom WordList ID</string>
     <string name="create">Create</string>
+    <string name="next">Next</string>
+    <string name="select_wordlist">Select Wordlist</string>
+    <string name="hint_lobby_title">Lobby title</string>
+    <string name="hint_wordlist_title">Wordlist title</string>
+    <string name="hint_username">Username</string>
+    <string name="prompt_lobby_title">Enter a valid lobby title!</string>
+    <string name="prompt_lobby_title_invalid">Title has to be at least 4 letters</string>
+    <string name="wait_creating">Creating lobby</string>
+    <string name="wait_joining">Joining lobby</string>
+    <string name="error_create">Couldn\'t create lobby</string>
+    <string name="error_join">Couldn\'t join lobby</string>
+    <string name="error_firebase">Google Firebase isn\'t working, try again later!</string>
 
     <!-- Brush width dialog -->
     <string name="width">Width</string>
     <string name="set">Set</string>
     <string name="set_brush_width">Set brush width</string>
-
 
 </resources>
